--- a/0306.md
+++ b/0306.md
@@ -28,3 +28,39 @@
 - DB2
 - SQLite  
 - no-sql
+
+### MySQL Install
+1. unzip
+2. 
+
+```
+[mysql]
+# 设置 mysql 客户端默认字符集
+default-character-set=utf8mb4 
+[mysqld]
+#设置 3306 端口
+port = 3306 
+# 设置 mysql 的安装目录
+basedir=D:\mysql-5.7.24-winx64
+# 设置 mysql 数据库的数据的存放目录
+datadir=D:\mysql-5.7.24-winx64\data
+# 允许最大连接数
+max_connections=200
+# 服务端使用的字符集默认为比特编码的 latin1 字符集
+character-set-server=utf8mb4
+# 创建新表时将使用的默认存储引擎
+default-storage-engine=INNODB
+# 开启标准的 explicit_defaults_for_timestamp 功能
+explicit_defaults_for_timestamp=true
+```
+
+3. cmd
+
+`your_mysql_directory/bin>mysqld --initialize --user=mysql --console`
+
+> remember generated password
+
+4. cmd
+
+`your_mysql_directory/bin>mysqld --install your_mysql_service_name --defaults-file="your_mysql_directory/my.ini"`
+
