--- a/0306.md
+++ b/0306.md
@@ -27,4 +27,94 @@
 - SQL Server
 - DB2
 - SQLite  
+    - [http://www.runoob.com/sqlite/sqlite-tutorial.html](http://www.runoob.com/sqlite/sqlite-tutorial.html)
+        - SQLite 教程
+        - SQLite 简介
+        - SQLite 安装
+        - SQLite 命令
+        - SQLite 语法
+        - SQLite 数据类型
+        - SQLite 创建数据库
 - no-sql
+
+### Mysql
+
+### MySQL Install
+1. unzip
+2. create `my.ini`
+
+```
+[mysql]
+# 设置 mysql 客户端默认字符集
+default-character-set=utf8mb4 
+[mysqld]
+#设置 3306 端口
+port = 3306 
+# 设置 mysql 的安装目录
+basedir=D:\mysql-5.7.24-winx64
+# 设置 mysql 数据库的数据的存放目录
+datadir=D:\mysql-5.7.24-winx64\data
+# 允许最大连接数
+max_connections=200
+# 服务端使用的字符集默认为比特编码的 latin1 字符集
+character-set-server=utf8mb4
+# 创建新表时将使用的默认存储引擎
+default-storage-engine=INNODB
+# 开启标准的 explicit_defaults_for_timestamp 功能
+explicit_defaults_for_timestamp=true
+```
+
+3. 命令行执行命令的注意事项
+- 这个命令的作用？
+- 这个命令在哪执行？
+- 这个命令的执行方式 `可变部分` `不可变部分` 
+- 这个命令执行后的结果
+
+4. cmd
+
+`your_mysql_directory/bin>mysqld --initialize --user=mysql --console`
+
+> remember generated password  `,#xeFyIds7BS`
+
+5. 安装服务 cmd
+
+`your_mysql_directory/bin>mysqld --install your_mysql_service_name --defaults-file="your_mysql_directory/my.ini"`
+
+6. 启动 MySQL cmd
+
+`net start your_mysql_service_name`
+
+7. 删除服务 cmd
+
+`sc delete your_mysql_service_name`
+
+8. 登录 MySQL cmd
+
+`your_mysql_directory/bin> mysql -u root -p`
+
+9. 修改密码 cmd
+
+`msyql> set password = password('new_password');`
+
+10. 退出 MySQL cmd
+
+`mysql> exit`
+
+11. 检查配置 cmd
+
+`mysql> show variables like 'char%';`
+`mysql> show variables like 'coll%';`
+
+
+
+
+
+
+
+
+
+
+
+
+
+
