--- a/0306.md
+++ b/0306.md
@@ -102,8 +102,8 @@ explicit_defaults_for_timestamp=true
 
 11. 检查配置 cmd
 
-`mysql> show variables like 'char%';`
-`mysql> show variables like 'coll%';`
+- `mysql> show variables like 'char%';`
+- `mysql> show variables like 'coll%';`
 
 
 
