--- a/0306.md
+++ b/0306.md
@@ -105,7 +105,9 @@ explicit_defaults_for_timestamp=true
 - `mysql> show variables like 'char%';`
 - `mysql> show variables like 'coll%';`
 
+### SQL
 
+### Database Design
 
 
 
