--- a/0306.md
+++ b/0306.md
@@ -107,6 +107,11 @@ explicit_defaults_for_timestamp=true
 
 ### SQL
 
+#### DDL
+- `CREATE` 创建
+- `ALTER` 修改
+- `DROP` 删除
+
 ### Database Design
 
 
