--- a/0306.md
+++ b/0306.md
@@ -112,7 +112,16 @@ explicit_defaults_for_timestamp=true
 - `ALTER` 修改
 - `DROP` 删除
 
-### Database Design
+### 作业
+- 数据库 db_school
+- 表 student
+- 表 course
+- 表 sc `select course`
+- 添加样本数据
+- 实现学生选课的功能
+
+
+
 
 
 
